# Drone_thesis_2017_old2

./: done.md  to_do.md  to_do.md~
Code/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
Code/src/ardrone_velocity/: CMakeLists.txt
Code/src/ardrone_velocity_ekf/: CMakeLists.txt
Code/src/thesis_aurian/: CMakeLists.txt
Code/src/ucl_drone/: CMakeLists.txt
Misc/: Notes_ROS_tuto.md  Overview_PathPlanning_code.cpp  acces_comptes.txt  controller_2016_notes.md  github_setup.md  list_of_ROSpackages.txt  old_codes.txt
Misc/Notes_Alex/: 00-Parrot.md  01-Install-ROS.md  02-tum_ardrone.md  03-Refs.md  TODO Total.txt  mainpage.dox  pour 2016-2017.txt  z0-ROS-NicolasR.md
Misc/Notes_Alex/Journal de bord/: JDB_Q2.txt  S10.md  S12.md  S3.md  S4.md  S5.md  S7.md  TFE_BilanQ1.txt  W1.md  W2.md  W3.md  W4.md  W5.md  W6.md  W8.md  W8_2.md  operation_seduction.md  reunion_9-12.md
Misc/Notes_Alex/doc_informaticien/: Rapport.odt  installation ros
Misc/Notes_Alex/notices/: autoconfarparrot  notes-nico.md  quickstart.md  quickstart.txt
Operation_Seduction/: .qglviewer.xml  README.md  launch.sh
ROS_data/: General_Monitoring.perspective  ddzdz_2017-11-02-07-42-33.bag  new_2017-11-02-07-40-27.bag  read_data.py  testEKF_2017-11-02-07-38-54.bag
ROS_data/computer_vision/Color filter/: HSV_values
ROS_data/controllers_measurements/: yujyu_2017-11-02-07-23-17.bag
ROS_data/controllers_measurements/tud/: tud_02m-s.bag  tud_02m-s_line.bag  tud_hover60_1.bag  tud_hover60_1.txt  tud_hover60_2.txt  tud_hover60_2_2017-11-14-16-52-47.bag  tud_hover60_3.txt  tud_hover60_4.bag  tud_hover60_4.txt  tud_hover60_5.txt  tud_hover60_5_2017-11-14-17-05-40.bag  tud_hover60_abime_1.bag  tud_hover60_abime_2.bag  tud_hover60_abime_3.bag  tud_leftline6m_02ms_1.txt  tud_leftline6m_02ms_1_2017-11-14-15-53-19.bag  tud_leftline6m_02ms_2.txt  tud_leftline6m_02ms_2_2017-11-14-15-55-09.bag  tud_leftline6m_02ms_3.txt  tud_leftline6m_02ms_3_2017-11-14-15-57-00.bag  tud_leftline6m_02ms_4.txt  tud_leftline6m_02ms_4_2017-11-14-15-59-12.bag  tud_leftline6m_02ms_5.txt  tud_leftline6m_02ms_5_2017-11-14-16-01-51.bag  tud_leftline6m_02ms_abime_1_2017-11-14-15-36-32.bag  tud_leftline6m_02ms_abime_2_2017-11-14-15-48-21.bag  tud_leftline6m_02ms_abime_3_2017-11-14-15-50-23.bag  tud_leftline6m_06ms_1.bag  tud_leftline6m_06ms_2.txt  tud_leftline6m_06ms_2_2017-11-14-16-09-24.bag  tud_leftline6m_06ms_3_2017-11-14-16-10-41.bag  tud_leftline6m_06ms_4_2017-11-14-16-13-26.bag  tud_leftline6m_06ms_5.txt  tud_leftline6m_06ms_5_2017-11-14-16-12-05.bag  tud_leftline6m_06ms_abime_1.bag  tud_leftline6m_06ms_abime_2_2017-11-14-15-17-41.bag  tud_leftline6m_06ms_abime_3_2017-11-14-15-31-30.bag  tud_line3m_02ms_abime_1.bag  tud_line3m_02ms_abime_2.bag  tud_line3m_02ms_abime_3.bag  (+31 more)
ROS_data/controllers_measurements/tud_ekf/: ekf_hover60_1.bag  ekf_hover60_1.txt  ekf_hover60_2.txt  ekf_hover60_2_2017-11-15-16-18-00.bag  ekf_hover60_3.txt  ekf_hover60_3_2017-11-15-16-19-56.bag  ekf_hover60_4.bag  ekf_hover60_4.txt  ekf_hover60_5.txt  ekf_hover60_5_2017-11-15-16-24-46.bag  ekf_leftline6m_02ms_1.bag  ekf_leftline6m_02ms_1.txt  ekf_leftline6m_02ms_2.txt  ekf_leftline6m_02ms_2_2017-11-15-15-42-58.bag  ekf_leftline6m_02ms_3.bag  ekf_leftline6m_02ms_3.txt  ekf_leftline6m_02ms_4.bag  ekf_leftline6m_02ms_4.txt  ekf_leftline6m_02ms_5.txt  ekf_leftline6m_02ms_5_2017-11-15-16-10-25.bag  ekf_leftline6m_06ms_1.txt  ekf_leftline6m_06ms_1_2017-11-15-15-26-59.bag  ekf_leftline6m_06ms_2.txt  ekf_leftline6m_06ms_2_2017-11-15-15-28-20.bag  ekf_leftline6m_06ms_3.bag  ekf_leftline6m_06ms_3.txt  ekf_leftline6m_06ms_4.txt  ekf_leftline6m_06ms_4_2017-11-15-15-33-12.bag  ekf_leftline6m_06ms_5.txt  ekf_leftline6m_06ms_5_2017-11-15-15-34-33.bag  ekf_line6m_02ms_1.txt  ekf_line6m_02ms_1_2017-11-15-15-09-03.bag  ekf_line6m_02ms_2.txt  ekf_line6m_02ms_2_2017-11-15-15-10-43.bag  ekf_line6m_02ms_3.txt  ekf_line6m_02ms_3_2017-11-15-15-12-43.bag  ekf_line6m_02ms_4.bag  ekf_line6m_02ms_4.txt  ekf_line6m_02ms_5.txt  ekf_line6m_02ms_5_2017-11-15-15-16-35.bag  (+11 more)
ROS_data/controllers_measurements/without_controller/: noctrl_hover60_1.bag  noctrl_hover60_2.bag  noctrl_hover60_2.txt  noctrl_hover60_3_2017-11-15-11-58-32.bag  (+38 more)
References/: sources.md
temp_backup/backup_18-9-17/: Modif.md  README.md  README_FR.md
temp_backup/backup_18-9-17/src/ucl_drone/: CMakeLists.txt  package.xml  rosdoc.yaml
temp_backup/backup_18-9-17/src/ucl_drone/camera_info/: re_calib_after_correction
temp_backup/backup_18-9-17/src/ucl_drone/include/ucl_drone/: PointXYZRGBSIFT.h  drone_role.h  multi_strategy.h  opencv_utils.h  path_planning.h  pose_estimation.h  strategy.h  ucl_drone.h
temp_backup/backup_18-9-17/src/ucl_drone/include/ucl_drone/computer_vision/: image_processor.h
temp_backup/backup_18-9-17/src/ucl_drone/include/ucl_drone/map/: keyframe.h  map_keyframe_based.h
temp_backup/backup_18-9-17/src/ucl_drone/include/ucl_drone/vision_gui/: vision_gui.h
temp_backup/backup_18-9-17/src/ucl_drone/launch/: drone_8.launch  play_with_rosbag.launch  simple_and_modified.launch  tum_ardrone_double.launch
temp_backup/backup_18-9-17/src/ucl_drone/msg/: Strategy.msg  StrategyMsg.msg
temp_backup/backup_18-9-17/src/ucl_drone/src/: opencv_utils.cpp
temp_backup/backup_18-9-17/src/ucl_drone/src/computer_vision/: computer_vision.cpp  target.cpp
temp_backup/backup_18-9-17/src/ucl_drone/src/controller/: basic_controller_old.cpp  controller.cpp  controller_custom.cpp
temp_backup/backup_18-9-17/src/ucl_drone/src/map/: features_matcher.cpp  frame.cpp  map_keyframe_based.cpp
temp_backup/backup_18-9-17/src/ucl_drone/src/multi_strategy/: drone_role.cpp  multi_strategy.cpp
temp_backup/backup_18-9-17/src/ucl_drone/src/path_planning/: path_planning.cpp  path_planning_custom.cpp
temp_backup/backup_18-9-17/src/ucl_drone/src/pose_estimation/: pose_estimation.cpp
temp_backup/backup_18-9-17/src/ucl_drone/src/strategy/: strategy.cpp
temp_backup/backup_18-9-17/src/ucl_drone/src/vision_gui/: vision_gui.cpp
temp_backup/check/: old_controller_tud.cpp
ucl_drone_2016/: .clang-format  CONTRIBUTING.md
(+282 files in other folders)
